# OOP345

ws1/: CMakeLists.txt  dictionary.cpp  dictionary.h  event.cpp  event.h  logger.cpp  logger.h  settings.cpp  settings.h  timeMonitor.cpp  timeMonitor.h
ws2/: CMakeLists.txt  abilities.h  archer.h  barbarian.h  character.h  characterTpl.h  guild.cpp  guild.h  health.h  rogue.h  team.cpp  team.h  tester_1.cpp  weapons.h
ws3/: CMakeLists.txt  book.cpp  book.h  collection.cpp  collection.h  mediaItem.h  movie.cpp  movie.h  settings.cpp  settings.h  spellChecker.cpp  spellChecker.h  tester_1.cpp  tvShow.cpp  tvShow.cpp.bak.cpp  tvShow.h
ws4/: CMakeLists.txt  CustomerOrder.cpp  CustomerOrder.h  LineManager.cpp  LineManager.h  Station.cpp  Station.h  Utilities.cpp  Utilities.h  Workstation.cpp  Workstation.h  main.cpp
